# XTBClient

./: .gitignore  README.md  pyproject.toml
XTBApi/: errors.py  xtb_base.py
XTBApi/client/: axtb.py  xtb.py
XTBApi/models/: requests.py
XTBClient/: xtb_base.py
XTBClient/client/: axtb.py  xtb.py
XTBClient/models/: models.py  requests.py
tests/: testing_utils.py
tests/async-client/: test_calendar.py  test_failure.py  test_symbols.py  test_trades.py
tests/data/: get_all_symbols-small.json  get_calendar.json  get_current_user_data.json  get_symbol.json  get_trades.json
