[tool.poetry]
name = "XTBClient"
version = "0.1.0"
description = "XTB trading platform client"
authors = ["Cristian Libotean <eblis102@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = "^0.5.7"
websockets = "^10.3"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"
websocket-client = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
